Bug 30188 - X server crashes with a SIGBUS on Evergreen
Summary: X server crashes with a SIGBUS on Evergreen
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Radeon (show other bugs)
Version: XOrg git
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
: 30517 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-09-14 10:12 UTC by Tomasz Figa
Modified: 2010-11-11 17:08 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
X server log (51.42 KB, text/plain)
2010-09-14 10:13 UTC, Tomasz Figa
no flags Details
dmesg log (43.58 KB, text/plain)
2010-09-14 10:13 UTC, Tomasz Figa
no flags Details
various; bt full, dmesg, sw version (31.28 KB, text/plain)
2010-09-26 06:25 UTC, Francesco R
no flags Details
Xorg backtrace (52.38 KB, patch)
2010-10-05 17:47 UTC, Maggioni Marcello
no flags Details | Splinter Review
Xorg backtrace 2 (36.36 KB, patch)
2010-10-06 01:35 UTC, Maggioni Marcello
no flags Details | Splinter Review
xorg backtrace (2.96 KB, text/plain)
2010-10-06 03:32 UTC, Rafael Monica
no flags Details
fix for 2.6.35 and 2.6.36 (1.43 KB, patch)
2010-10-12 09:19 UTC, Alex Deucher
no flags Details | Splinter Review

Description Tomasz Figa 2010-09-14 10:12:10 UTC
I have recently switched my desktop PC with Radeon HD 5770 from fglrx to xf86-video-ati and discovered a problem causing the X server to crash with a SIGBUS signal.

I can reproduce this bug by opening a PDF document in Okular and scrolling through several pages back and forth, then mouse cursor hangs and X server crashes. It happens regardless of kernel version.

Disabling RenderAccel helps, but it's not a solution since it turns off the acceleration.

It's not a duplicate of https://bugs.freedesktop.org/show_bug.cgi?id=29738 , because it still happens with pre-709ea97145c125b3811ff70429e90ebdb0e832e5 kernels.

My setup:

Linux 2.6.35.4, git drm-fixes or git drm-radeon-testing
xorg-server git 09/13
xf86-video-ati git 09/13
libdrm git 09/13

Intel Core 2 Quad Q6600 Processor
AMD Radeon HD 5770
Comment 1 Tomasz Figa 2010-09-14 10:13:03 UTC
Created attachment 38699 [details]
X server log
Comment 2 Tomasz Figa 2010-09-14 10:13:57 UTC
Created attachment 38700 [details]
dmesg log
Comment 3 Tomasz Figa 2010-09-14 10:44:52 UTC
Comment on attachment 38700 [details]
dmesg log

drm-2.6 commit 7a6b2896f261894dde287d3faefa4b432cddca53

2.6.35.4, latest drm-fixes and drm-radeon-testing don't give any interesting output
Comment 4 Jure Repinc 2010-09-23 08:42:13 UTC
I think I have the same bug, I also first noticed it while opening a PDF in Okular. Later I also got ceashes when switching the virtual desktop. This is with kernel 2.6.36 RC5 and eMachines E640G laptop with integrated ATI Mobility Radeon HD 5470.
Comment 5 Alex Deucher 2010-09-24 10:35:13 UTC
I still think this is a related bug 29738.  The backtrace is just about the same.
Comment 6 Tomasz Figa 2010-09-24 10:58:40 UTC
I doubt that this issue shares with bug 29738 anything more than similar behavior.

Bug 29738 was related to a single commit and as I said, I have tested kernel revisions from before and after the problematic change and both options didn't work.
Comment 7 Francesco R 2010-09-26 06:25:31 UTC
Created attachment 38962 [details]
various; bt full, dmesg, sw version

me too, evergreen 1002:68f9.

The attach contain various things I've tried to inspect may be useful or not.
Comment 8 Alex Deucher 2010-09-30 15:42:04 UTC
*** Bug 30517 has been marked as a duplicate of this bug. ***
Comment 9 Felix Blanke 2010-10-05 08:42:50 UTC
Are there any kind of information I (we) can provide to help to solve this bug?

I'm getting this bug a lot and it is really frustrating losing some work etc. while X is crashing :/
Comment 10 Maggioni Marcello 2010-10-05 17:47:06 UTC
same problem here with similar backtrace. (I'll attach the backtrace)

The mouse freezes and X restarts. Okular is the only application that seems to trigger easily this bug.
Comment 11 Maggioni Marcello 2010-10-05 17:47:36 UTC
Created attachment 39200 [details] [review]
Xorg backtrace
Comment 12 Maggioni Marcello 2010-10-06 01:34:19 UTC
I found another situation where xorg crashes. Bringing virtualbox fullscreen makes the x server crash immediatly, but this time not with a sigbus, but with a segfault.

another backtrace attached
Comment 13 Maggioni Marcello 2010-10-06 01:35:18 UTC
Created attachment 39213 [details] [review]
Xorg backtrace 2
Comment 14 Felix Blanke 2010-10-06 01:59:20 UTC
Virtualbox triggers that bug a lot at my machine.

But I'm getting a sigbus, not a segfault. My backtrace is in the duplicate bug 30517.

Sometimes it happens when simply starting virtualbox, sometimes when switching to fullscreen,...
Comment 15 Rafael Monica 2010-10-06 03:32:38 UTC
Created attachment 39218 [details]
xorg backtrace

Also getting a SIGBUS with Evergreen. For me it's triggered by browsing google image search with Firefox. Backtrace attached.
Comment 16 Alex Deucher 2010-10-06 17:14:30 UTC
This might be an issue with non-cpu accessible vram.  Do you still see the issue with the drm-next or drm-radeon-testing branches of Dave's drm tree?

Specifically, make sure your kernel has this patch:
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commitdiff;h=d7ccd8fc11700502b5a104b7bad595b492a3aa1b
Comment 17 Felix Blanke 2010-10-07 01:42:53 UTC
Maybe it's a noob question but how do I apply that patch on top of 2.6.26-rc6?

Or do I have to use the newest git kernel for that?
Comment 18 Tomasz Figa 2010-10-07 03:58:48 UTC
With current drm-radeon-testing, after some short testing I can say that I can't trigger the bug by Okular anymore. 

Will see how it performs in normal use.
Comment 19 Felix Blanke 2010-10-07 04:11:22 UTC
Same for me. Can't trigger the bug with drm-testing @virtualbox.


Will that stuff be in 2.6.37?
Comment 20 Jure Repinc 2010-10-07 05:25:41 UTC
Looks good so far for me too. No crash after several hours of use.
Comment 21 Alex Deucher 2010-10-07 07:39:05 UTC
The blit stuff will be in 2.6.37 and Jerome has a set of patches we need to try and get into stable to avoid this on older kernels.
Comment 22 Rafael Monica 2010-10-07 10:11:48 UTC
Just a me too. Latest drm-radeon-testing seems to have fixed my bus errors also.
Comment 23 Maggioni Marcello 2010-10-07 14:47:22 UTC
Hei, I tried the drm-radeon-testing kernel and now Okular works, but X still crashes with a segfault when going fullscreen with virtualbox.

Someone is having this problem? Do you think is related to this bug?
Comment 24 Alex Deucher 2010-10-07 16:09:43 UTC
(In reply to comment #23)
> Hei, I tried the drm-radeon-testing kernel and now Okular works, but X still
> crashes with a segfault when going fullscreen with virtualbox.
> 
> Someone is having this problem? Do you think is related to this bug?

That's a different issue.  Please file a different bug for that.
Comment 25 Felix Blanke 2010-10-08 03:12:10 UTC
Virtualbox fullscreen with a Win7 guest works for me. This should be really a different issue.
Comment 26 Alex Deucher 2010-10-12 09:19:50 UTC
Created attachment 39385 [details] [review]
fix for 2.6.35 and 2.6.36

This patch should fix the issue on stable kernels.
Comment 27 Alex Deucher 2010-10-13 13:53:07 UTC
This patch, scheduled hopefully for 2.6.36 should also fix the issue:
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commitdiff;h=c919b371cb734f42b1130e706ecee262f8d9261d
Comment 28 Alex Deucher 2010-10-15 08:40:42 UTC
(In reply to comment #27)
> This patch, scheduled hopefully for 2.6.36 should also fix the issue:
> http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=commitdiff;h=c919b371cb734f42b1130e706ecee262f8d9261d

Linus pulled this into 2.6.36:
http://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=commitdiff;h=c919b371cb734f42b1130e706ecee262f8d9261d

I'd like to get something into 2.6.35 stable as well.
Comment 29 Alex Deucher 2010-11-11 17:08:18 UTC
fixes pushed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.